--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ subjects:
 - !lcsh 'Fables, English -- Early works to 1800'
 - !lcsh 'Fables'
 - !lcc 'PR'
+- GITenberg
 title: Aesop Dress'd; Or, A Collection of Fables Writ in Familiar Verse
 url: http://www.gutenberg.org/ebooks/33888
